bug fix : change the position of huebee color picker and add z-index 1000 to huebee class

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,3 +174,7 @@ canvas {
   height: 33px;
   text-align: center;
 }
+
+.huebee {
+  z-index: 1000;
+}
